# CoT-Reasoning_without_Prompting

./: 2024.09.28_notebook.ipynb  pyproject.toml
